--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "socket.io": "^4.7.2"
   }
